tests/NormalTests/paczka1/fuzzy1/22639045.err
Error in line 4: S240 S240 76,2
Error in line 8: IcdNtWGMu7 S54 56,2
Error in line 18: wf1f7ZQc A533 329,4
Error in line 14: IcdNtWGMu7 S240 74,0
Error in line 27: wf1f7ZQc S54 0,1
Error in line 21: x7XPg A533 96,7
Error in line 32: IcdNtWGMu7 A533 67,5
